@startuml
class User {
    - id: UUID
    - name: String
    - watchingVideo: WatchVideo
    + User(UUID id): void
    + watchVideo(UUID videoId): void
}

class Video {
    - id: UUID
    - duration: int
    - data: byte[]
}

class WatchVideo {
    - position: int
    - video: Video
    + WatchVideo(video: Video): void
    + nextTick(): void
}

class VideoFactory {
    - Map<UUID, Video> videos;
    + watchVideo(UUID id): WatchVideo
}

User --> WatchVideo
User --> VideoFactory
WatchVideo --> Video
@enduml
